--- a/client/src/main/res/layout/chat_header_global.xml
+++ b/client/src/main/res/layout/chat_header_global.xml
@@ -22,8 +22,8 @@
       android:layout_alignParentTop="true"
       android:layout_alignParentEnd="true"
       android:layout_marginEnd="4dp"
-      android:layout_marginTop="2dp"
-      android:background="@drawable/button_bg"
+      android:layout_marginTop="4dp"
+      android:background="@drawable/button_native_selector"
       android:scaleType="fitCenter"
       android:src="@drawable/cog" />
 
@@ -35,6 +35,7 @@
       android:layout_alignBottom="@+id/title"
       android:layout_toStartOf="@+id/settings_btn"
       android:layout_marginEnd="10dp"
+	  android:background="@drawable/button_native_selector"
       android:text="@string/new_group" />
 
   <Button android:id="@+id/unread_btn"
@@ -44,7 +45,7 @@
           android:layout_alignBottom="@+id/title"
           android:layout_toStartOf="@+id/new_group_btn"
           android:layout_marginEnd="10dp"
-          android:background="@drawable/button_red_bg"
+          android:background="@drawable/button_red_native_selector"
           android:text="  0  " />
 
 </RelativeLayout>
