--- a/client/src/main/res/layout/ctrl_chat_mini_view.xml
+++ b/client/src/main/res/layout/ctrl_chat_mini_view.xml
@@ -20,6 +20,6 @@
           android:layout_alignParentEnd="true"
           android:layout_marginEnd="10dp"
           android:layout_marginTop="10dp"
-          android:background="@drawable/button_red_bg"
+          android:background="@drawable/button_red_native_selector"
           android:text="  0  " />
 </merge>
